<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/first_name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="189dp" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/last_name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="266dp" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Age"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:inputType="number"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="523dp" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Load"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="524dp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="523dp" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Clear"
        tools:layout_editor_absoluteY="524dp" />

</androidx.constraintlayout.widget.ConstraintLayout>